php/ideasoft/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

  name: ideasoft-ingress
  namespace: ideasoft
spec:
  ingressClassName: nginx
  rules:
  - host: php-test.ideasoft.com
    http:
      paths:
      - backend:
          service:
            name: ideasoft
            port:
              number: 2000
        path: /
        pathType: Prefix
